<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/org_title_label"/>
    <EditText
        android:id="@+id/org_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/org_title_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/org_details_label"/>
    <EditText
        android:id="@+id/org_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/org_details_hint"/>
    <Button
        android:id="@+id/org_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/org_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/org_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/org_solved_label"/>
</LinearLayout>